feat: 임대가 끝난 준비 상태 턴 교정을 주기적으로 선점해 같은 입력으로 다시 요청하고 시도를 다 쓰면 실패로 확정한다